<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cc.thiago.demolayout.CadastroActivity">

    <TextView
        android:id="@+id/label_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_nome"
        style="@style/textview"/>

    <EditText
        android:id="@+id/hintNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNome" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEmail" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etEmail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_senha" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSenha"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_confirma_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvConfirmaSenha" />

    <EditText
        android:id="@+id/hintConfirmaSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintConfirmeSenha"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_idade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvIdade" />

            <EditText
                android:id="@+id/et_idade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_sexo" />

            <Spinner
                android:id="@+id/sp_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sexos"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_cadastrar"
        android:text="Cadastrar"/>

</LinearLayout>
